--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
