--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
