--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "generate-password": "^1.7.1",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
