--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "qs": "^6.11.2"
   }
 }
