--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.0.2",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "xml2js": "^0.6.2"
   }
 }
